--- a/public/index.ejs
+++ b/public/index.ejs
@@ -8,11 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,500italic,700,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <% if (vendorCSS !== undefined) { %><link rel="stylesheet" href="<%= vendorCSS %>"><% } %>
+    <link rel="stylesheet" href="<%= bundleCSS %>">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
   </head>
   <body>
     <div id="container"></div>
-    <script src="<%= bundle %>"></script>
+    <script src="<%= vendorJS %>"></script>
+    <script src="<%= bundleJS %>"></script>
     <%_ if (!debug && config.trackingID) { _%>
     <script>
       window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
